<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_repositories_list_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="false"
    tools:context=".ui.fragment.RepositoriesListFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_repositories"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/status_bar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/repositories"
        app:titleTextAppearance="@style/RepositoriesTitleText"
        app:contentInsetStart="24dp">

        <ImageButton
            android:id="@+id/button_log_out_repositories"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="4dp"
            android:background="@color/status_bar"
            android:contentDescription="@string/log_out"
            android:padding="12dp"
            android:src="@drawable/ic_logout" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_repositories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_repositories"
        tools:listitem="@layout/item_repository" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_connection_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_repositories">

        <ImageView
            android:id="@+id/image_connection_error"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="244dp"
            android:contentDescription="@string/connection_error"
            android:src="@drawable/ic_connection_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_connection_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/connection_error"
            android:textAppearance="@style/ErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_connection_error"
            tools:text="Connection error" />

        <TextView
            android:id="@+id/text_check_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_connection"
            android:textAppearance="@style/CheckErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_connection_error"
            tools:text="Check your Internet connection" />

        <include
            android:id="@+id/button_retry_connection_error"
            layout="@layout/retry_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_repositories_empty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_repositories">

        <ImageView
            android:id="@+id/image_repositories_empty"
            android:layout_width="87dp"
            android:layout_height="72dp"
            android:layout_marginTop="248dp"
            android:contentDescription="@string/no_repositories"
            android:src="@drawable/ic_empty_repos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_repositories_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/empty"
            android:textAppearance="@style/EmptyText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_repositories_empty"
            tools:text="Empty" />

        <TextView
            android:id="@+id/text_no_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_repositories"
            android:textAppearance="@style/CheckErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_repositories_empty"
            tools:text="No repositories at the moment" />

        <android.widget.Button
            android:id="@+id/button_refresh_repositories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_button"
            android:text="@string/refresh"
            android:textAppearance="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Refresh" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_something_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_repositories">

        <ImageView
            android:id="@+id/image_something_error"
            android:layout_width="80dp"
            android:layout_height="68dp"
            android:layout_marginTop="244dp"
            android:contentDescription="@string/something_error"
            android:src="@drawable/ic_something_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_something_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/something_error"
            android:textAppearance="@style/ErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_something_error"
            tools:text="Something error" />

        <TextView
            android:id="@+id/text_check_something"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_something"
            android:textAppearance="@style/CheckErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_something_error"
            tools:text="Check your something" />

        <include
            android:id="@+id/button_retry_something_error"
            layout="@layout/retry_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_repositories">

        <ProgressBar
            android:id="@+id/progressbar_loading"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="300dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/animated_rotate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>






