<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_detail_info_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="false"
    tools:context=".DetailInfoFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_detail_info"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/status_bar"
        android:contentDescription="@string/back"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextAppearance="@style/RepositoriesTitleText"
        tools:title="moko-resources">

        <ImageButton
            android:id="@+id/button_log_out_detail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="4dp"
            android:background="@color/status_bar"
            android:contentDescription="@string/log_out"
            android:padding="12dp"
            android:src="@drawable/ic_logout" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_repository_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail_info">

        <ImageView
            android:id="@+id/image_link"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/link"
            android:src="@drawable/ic_link"
            app:layout_constraintEnd_toStartOf="@id/text_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/LinkText"
            app:layout_constraintBottom_toBottomOf="@+id/image_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_link"
            app:layout_constraintTop_toTopOf="@id/image_link"
            tools:text="https://github.com/icerockdev/moko-resources" />

        <ImageView
            android:id="@+id/image_license"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/license"
            android:src="@drawable/ic_license"
            app:layout_constraintEnd_toStartOf="@id/text_license_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_link" />

        <TextView
            android:id="@+id/text_license_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/license"
            android:textAppearance="@style/LicenseText"
            app:layout_constraintBottom_toBottomOf="@id/image_license"
            app:layout_constraintStart_toEndOf="@+id/image_license"
            app:layout_constraintTop_toTopOf="@id/image_license"
            tools:text="License" />

        <TextView
            android:id="@+id/text_license_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/LicenseText"
            app:layout_constraintBottom_toBottomOf="@id/image_license"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_license"
            tools:text="Apache-2.0" />

        <ImageView
            android:id="@+id/image_stars"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/stars"
            android:src="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_license" />

        <TextView
            android:id="@+id/text_stars_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/CountOfStarsText"
            app:layout_constraintBottom_toBottomOf="@id/image_stars"
            app:layout_constraintStart_toEndOf="@id/image_stars"
            app:layout_constraintTop_toTopOf="@id/image_stars"
            tools:text="259" />

        <TextView
            android:id="@+id/text_stars_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/stars"
            android:textAppearance="@style/StatisticsText"
            app:layout_constraintBottom_toBottomOf="@id/image_stars"
            app:layout_constraintStart_toEndOf="@id/text_stars_count"
            app:layout_constraintTop_toTopOf="@id/image_stars"
            tools:text="stars" />

        <ImageView
            android:id="@+id/image_forks"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/forks"
            android:src="@drawable/ic_forks"
            app:layout_constraintBottom_toBottomOf="@id/image_stars"
            app:layout_constraintEnd_toStartOf="@id/text_forks_count"
            app:layout_constraintTop_toTopOf="@id/image_stars" />

        <TextView
            android:id="@+id/text_forks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CountOfForksText"
            app:layout_constraintBottom_toBottomOf="@id/image_forks"
            app:layout_constraintEnd_toStartOf="@id/image_watchers"
            app:layout_constraintStart_toEndOf="@id/text_stars_label"
            app:layout_constraintTop_toTopOf="@id/image_forks"
            tools:text="30" />

        <TextView
            android:id="@+id/text_forks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/forks"
            android:textAppearance="@style/StatisticsText"
            app:layout_constraintBottom_toBottomOf="@id/image_forks"
            app:layout_constraintStart_toEndOf="@id/text_forks_count"
            app:layout_constraintTop_toTopOf="@id/image_forks"
            tools:text="forks" />

        <ImageView
            android:id="@+id/image_watchers"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/watchers"
            android:src="@drawable/ic_watcher"
            app:layout_constraintBottom_toBottomOf="@id/image_forks"
            app:layout_constraintEnd_toStartOf="@id/text_watchers_count"
            app:layout_constraintTop_toTopOf="@id/image_forks" />

        <TextView
            android:id="@+id/text_watchers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAppearance="@style/CountOfWatchersText"
            app:layout_constraintBottom_toBottomOf="@id/image_watchers"
            app:layout_constraintEnd_toStartOf="@id/text_watchers_label"
            app:layout_constraintTop_toTopOf="@id/image_watchers"
            tools:text="10" />

        <TextView
            android:id="@+id/text_watchers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchers"
            android:textAppearance="@style/StatisticsText"
            app:layout_constraintBottom_toBottomOf="@id/image_watchers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_watchers"
            tools:text="watchers" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll_readme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_repository_statistics">

        <LinearLayout
            android:id="@+id/layout_readme_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_connection_error_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_repository_statistics">

        <ImageView
            android:id="@+id/image_connection_error_detail"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/connection_error"
            android:src="@drawable/ic_connection_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_connection_error_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/connection_error"
            android:textAppearance="@style/ErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_connection_error_detail"
            tools:text="Connection error" />

        <TextView
            android:id="@+id/text_check_connection_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_connection"
            android:textAppearance="@style/CheckErrorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_connection_error_detail"
            tools:text="Check your Internet connection" />

        <include
            android:id="@+id/button_retry_connection_error_detail"
            layout="@layout/retry_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_loading_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_repository_statistics">

        <ProgressBar
            android:id="@+id/progressbar_loading_detail"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/animated_rotate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_no_readme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_repository_statistics">

        <TextView
            android:id="@+id/text_no_readme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_readme"
            android:textAppearance="@style/NoReadmeText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="No README.md" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>