<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_auth_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="false"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.fragment.AuthFragment">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/personal_access_token"
        android:textColorHint="@color/white_50_percent"
        app:boxBackgroundMode="none"
        app:hintTextAppearance="@style/HintTextStyle"
        app:hintTextColor="@color/white_50_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        tools:hint="Personal access token">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="2dp"
            android:paddingEnd="12dp"
            android:textAppearance="@style/InputTextStyle"
            android:textColor="@color/white"
            tools:text="" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_token_underline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_token" />

    <TextView
        android:id="@+id/text_invalid_token"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="4dp"
        android:text=""
        android:textAppearance="@style/ErrorTextStyle"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_token"
        tools:text="Invalid token" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.widget.Button
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_button"
            android:text="@string/sign_in"
            android:textAppearance="@style/ButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar_sign_in"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/animated_rotate"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/button_sign_in"
            app:layout_constraintEnd_toEndOf="@id/button_sign_in"
            app:layout_constraintStart_toStartOf="@id/button_sign_in"
            app:layout_constraintTop_toTopOf="@id/button_sign_in" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>